Fix text size and spacing

--- a/style.css
+++ b/style.css
@@ -36,10 +36,13 @@ p {
     display: flex;
     align-items: flex-end;
     justify-content: center;
+    font-size: 2.5rem;
 }
 .score {
     min-height: 30vh;
     align-items: center;
+    font-weight: 600;
+    font-size: 1.5rem;
 }
 .startButton {
     min-height: 16vh;
